@@ -1,8 +1,10 @@
 <html>
-    <head>
-        <title>Test</title>
-    </head>
-    <body>
-        Welcome
-    </body>
+<body>
+    <h1>Producer & Consumer Sample</h1>
+
+    <ul>
+        <li><a href="/toggle">Start/Stop Producers & Consumers</a></li>
+        <li><a href="/consumer/log">Consumer Logs</a></li>
+    </ul>
+</body>
 </html>
